removed sizes set with the iframe so it should now respond correctly on mobile

--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ header {
                
     }
 
+    iframe.youtube{
+        width:560px; 
+        height:315px;
+    }
+
     iframe.dreamy {
     position: absolute;
 
